--- a/proyectoFinal/medico/pubspec.yaml
+++ b/proyectoFinal/medico/pubspec.yaml
@@ -14,7 +14,9 @@ dependencies:
   path_provider: ^2.1.2
   path: ^1.9.0
   image_picker: ^1.0.4
-
+  collection: ^1.17.2
+  google_fonts: ^6.1.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
