--- a/proyectoFinal/medico/pubspec.yaml
+++ b/proyectoFinal/medico/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   image_picker: ^1.0.4
   collection: ^1.17.2
   google_fonts: ^6.1.0
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -24,3 +24,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - lib/assets/images/doctor_overlay.png
